# pgGit

./: .commitlintrc.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .mutmut_config.py  .plan-test-fixes.md  .pre-commit-config.yaml  .publicateur  .sqlfluff  .yamllint  ADVANCED_FEATURES_ROADMAP.md  API.md  API_REFERENCE.md  ARCHITECTURE_MIGRATION_CRITICAL_ASSESSMENT.md  ARCHITECTURE_MIGRATION_PLAN.md  ARCHITECTURE_MIGRATION_PLAN_REVISED.md  ARCHIVE_README_TEMPLATE.md  A_PLUS_QUALITY_ACHIEVED.md  BACKUP_QUALITY_IMPROVEMENTS.md  BUG_FIX_PLAN.md  BUG_INVENTORY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile.simple  DATABASE_CONNECTIVITY_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  DEVELOPER_TRAINING_COURSE.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_QUALITY_ASSESSMENT.md  Dockerfile  Dockerfile.demo  Dockerfile.storage-test  EVENT_TRIGGER_INVESTIGATION_REPORT.md  FINAL_UAT_REPORT.md  GOVERNANCE.md  HN_launch_story_updated.md  HN_story_balanced.md  (+123 more)
.archive/: BRANCH_COMPARISON_DETAILED.md  FINALIZATION_COMPLETION_REPORT.md  MERGE_COMPLETION_REPORT.md  RELEASE_ANNOUNCEMENT_v0.2.0.md  V051_BRANCH_ANALYSIS.md
.claude/: AGENT_LAUNCH_GUIDE.md  ARCHITECTURE_REVIEW_SUMMARY.md  IMPLEMENTATION_READINESS_CHECKLIST.md  PHASE_2_IMPLEMENTATION.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_CLARIFICATIONS_SUMMARY.md  PHASE_4_DOCUMENT_MAP.txt  PHASE_4_IMPLEMENTATION_READY.md  PHASE_4_INDEX.md  PHASE_4_PLAN.md  PHASE_4_QUICK_REFERENCE.md  PHASE_4_REVIEW.md  PHASE_4_START_HERE.md  PHASE_4_STEP_0_FIXTURES.md  PHASE_4_STEP_0_SUMMARY.md  PHASE_5_PLAN.md  PHASE_5_QUICK_REFERENCE.md  PHASE_5_STEP_0_FIXTURES.md  PHASE_6_ARCHITECTURE_REVIEW.md  PHASE_6_PLAN.md  PHASE_6_QUICK_REFERENCE.md  PHASE_6_STEP_0_FIXTURES.md  SKELETON_STRUCTURE.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/: COMMIT_CONVENTION.md  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  dependabot.yml
.phases/: AGENT_PROMPT_PHASE_1.md  CHAOS_ENGINEERING_GAP_ANALYSIS.md  CURRENT_STATUS.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  PHASE_1_QA_REPORT.md  PHASE_2_QA_REPORT.md  PHASE_3_FINAL_REPORT.md  PHASE_3_QA_REPORT.md  PHASE_3_QUALITY_REASSESSMENT.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_OVERVIEW.md  PHASE_4_QA_REPORT.md  PHASE_5_COMPLETION_REPORT.md  PHASE_5_QA_REPORT.md  PHASE_6_COMPLETION_REPORT.md  PHASE_7_COMPLETION_REPORT.md  PHASE_8_COMPLETION_REPORT.md  README.md  RUST_ANALYSIS.md  SESSION_COMPLETE.md  architecture-audit-report.md  code-quality-summary.md  commit-archaeology-report.md  commit-message-rewrites.md  docstring-gaps-report.md  feature-status-document.md  final-repository-health-report.md  greenfield-plan.md  import-organization-report.md  interactive-rebase-execution-plan.md  linting-violations-report.md  phase-1-2-audit-report.md  phase-1-critical-fixes.md  phase-2-quality-foundation.md  phase-3-production-polish.md  phase-4-excellence.md  phase-5-stabilization.md  rebase-strategy-document.md  repository-cleanup-report.md  (+2 more)
api/: exceptions.py  main.py  middleware.py  openapi_config.py  websocket_endpoints.py
benchmarks/: baseline.sql
demo/: demo_data.sql  real_world_scenario.sql
docs/: AI_Integration_Architecture.md  AI_Migration.md  API_Reference.md  ARCHITECTURE.md  Architecture_Decision.md  CI_CD.md  DDL_Hashing_Design.md  DEPLOYMENT.md  Enterprise_Features.md  GLOSSARY.md  Getting_Started.md  Git_Branching_Architecture.md  Hashing_Usage.md  INDEX.md  INSTALLATION.md  Local_LLM_Quickstart.md  Onboarding_Guide.md  Pattern_Examples.md  Performance_Analysis.md  README.md  SPIKE_1_1_PGGIT_V2_ANALYSIS.md  SPIKE_1_2_DDL_EXTRACTION_ANALYSIS.md  SPIKE_1_3_BACKFILL_ALGORITHM.md  SPIKE_1_4_GO_NO_GO_DECISION.md  Schema_Reconciliation.md  USER_GUIDE.md  all_files.txt  api.html  configuration-system.md  conflict-resolution-and-operations.md  cqrs-support.md  examples.html  function-versioning.md  getting-started.html  index.html  linked_files.txt  migration-integration.md  new-features-index.md  pggit_v0_integration_guide.md  pggit_v2_integration_guide.md  (+3 more)
examples/: 01_basic_branching.sql  02_postgresql17_compression.sql  03_cicd_integration.sql  04_conflict_resolution.sql  05_ai_migration_demo.sql  06_local_ai_demo.sql  07_size_management_demo.sql  ci_pipeline.sh  complete_workflow.sql  ddl_hashing_demo.sql  git_branching_poc.sql
marketing/: README.md
migrations/: pggit--0.1.0--0.2.0.sql  pggit--0.2.0--0.1.0.sql
opensource-marketing-framework/: .gitignore  CONTRIBUTING.md  LICENSE  README.md
prometheus/: alerts.yml
scripts/: build-deb.sh  build-rpm.sh  create-deployment-template.sh  create_extension_sql.sh  generate-api-docs.sql  lint_sql.py  release.sh  run_benchmarks.py  storage-monitor.sh  verify_production_readiness.sh
services/: Dockerfile  advisory_locks.py  cache.py  cache_warming_strategies.py  config.py  dependencies.py  query_optimization.py  requirements.txt  webhook_worker.py
sql/: 000_rename_schemas_to_v0.sql  000_version_function.sql  001_missing_tables.sql  001_schema.sql  002_event_triggers.sql  003_migration_functions.sql  004_utility_views.sql  005_migration_functions.sql  006_utility_views.sql  008_performance_optimizations.sql  009_ddl_hashing.sql  011_ai_migration_analysis.sql  012_size_management.sql  012_zero_downtime_deployment.sql  014_create_commit.sql  016_data_branching_cow.sql  016_merge_operations.sql  017_performance_monitoring.sql  017_performance_optimizations.sql  018_advanced_merge_operations.sql  019_ai_accuracy_tracking.sql  020_batch_operations_monitoring.sql  020_git_core_implementation.sql  022_schema_diffing_foundation.sql  023_storage_tier_stubs.sql  025_versioning_stubs.sql  028_analytics_insights.sql  028_performance_optimization.sql  029_chaos_engineering_core.sql  030_pggit_branch_management.sql  031_pggit_object_tracking.sql  031_time_travel.sql  (+76 more)
(+456 files in other folders)
